# todo-rust-grpc

./: .env  Cargo.toml  Procfile  build.rs
client/: Cargo.toml
client/src/: main.rs
proto/: Cargo.toml  auth.proto  build.rs  todo.proto
proto/defs/: todo.proto
proto/src/: lib.rs
proto/src/service/: auth.rs
server/: Cargo.toml
server/src/: main.rs
server/src/db/: manager.rs
server/src/interceptors/: auth.rs  mod.rs
server/src/service_impl/: auth.rs  todo.rs
src/: main.rs
src/db/: auth.rs  connection.rs  manager.rs  mod.rs  todo.rs
src/interceptors/: auth.rs
src/service/: auth.rs  todo.rs
src/service_impl/: auth.rs  mod.rs  todo.rs
