[package]
name = "proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.5"
prost = "0.8"
tokio = {version = "1.0", features = ["macros","rt-multi-thread"]}
tracing = "0.1.29"
tracing-subscriber = "0.3.1"
futures = {version = "0.3", default-features = false, features = ["alloc"]}
async-stream = "0.3"
tokio-stream = "0.1.8"

[build-dependencies]
tonic-build = "0.5"