[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tonic = "0.5"
prost = "0.8"
tokio = {version = "1.0", features = ["macros","rt-multi-thread"]}
tracing = "0.1.29"
tracing-subscriber = "0.3.1"
dotenv = "0.15.0"
sqlx = { version = "0.5.9", features = ["mysql","macros","migrate","runtime-tokio-rustls","time","uuid"] }
jwt = "0.15.0"
sha2 = "0.9.8"
hmac = "0.11.0"
futures = {version = "0.3", default-features = false, features = ["alloc"]}
async-stream = "0.3"
tokio-stream = "0.1.8"
proto = {path = "../proto"}

[build-dependencies]
tonic-build = "0.5"
